syntax = "proto3";


package product;


import "google/api/annotations.proto";

option go_package="pkg/product;product";



service ProductService{
    rpc GetProduct(GetProductRequest) returns (GetProductResponse){
        option (google.api.http) = {
            post: "/GetProduct",
            body: "*"
        };
    }
    rpc CreateProduct(CreateProductRequest) returns (CreateProductResponse){
        option (google.api.http) = {
            post: "/CreateProduct",
            body: "*"
        };
    }
    rpc DeleteProduct(DeleteProductRequest) returns (DeleteProductResponse){
        option (google.api.http) = {
            post: "/DeleteProduct",
            body: "*"
        };
    }
    rpc PatchProduct(PatchProductRequest) returns (PatchProductResponse){
        option (google.api.http) = {
            post: "/PatchProduct",
            body: "*"
        };
    }
}


message GetProductResponse{
    repeated Product products = 1;
}



message Product{
    int64 product_id = 1;
    string tittle = 2;
    float cost = 3;
    repeated string images_url = 4;
    int64 amount = 5;
    string desc = 6;
}

message GetProductRequest{
    int64 ProductId = 1;
}


message CreateProductRequest{
    Product product = 1;
}


message Image{
    string filename = 1;
    bytes image_bytes = 2;
}

message CreateProductResponse{
    Product res = 1;
}


message PatchProductRequest{
    Product changed_product = 1;
}

message PatchProductResponse{
    Product res = 1;
    bool visability = 2; 
}


message DeleteProductResponse{
    
}

message DeleteProductRequest{
    int64 product_id = 1;
}